# advent-of-code

./: .gitignore  README.md  day02-2.py  day02.py  day03.py  day04-2.py  day04.py  day05.c  day06-2.py  day06.py  day07-2.py  day11.py  day14.c  day17-2.py  day19-2.c  day19-2.py  day19.py  day21-2.py  day21.py  day22-2.py  day22.py  day23.py  day25.py  parity.py
2016/: day01-2.py  day01.py  day03-2.py  day05-2.py  day05.c  day05.py  day07.py  day08.py  day09-2.py  day09.py  day10.py  day11.py  day11_astar.py  day12.py  day13-2.py  day13.py  day14-2.c  day14.c  day15-2.py  day15.py  day16.py  day17.py  day19-2.c  day20-2.py  day20.py  verify_day14.py
2016/day18/: Cargo.toml
2016/day24/: package.json  permutator.js
2017/: KnotHash.hs  day01-1.hs  day01-2.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day07.hs  day08.hs  day09.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs  day17.hs  day18.hs  day19.hs  day20.hs  day22.hs  day23.hs  day24.hs  day25.hs
2018/: day1-2.py  day2-1.py  day2-2.py  day3-1-2.py  day3-1.py  day3-2.py  day4.py
2019/: Cargo.toml
2019/src/: day01.rs  day02.rs
2020/: __template__.py  day_1.py  day_11.py  day_12.py  day_14.py  day_16.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
2021/: day01.py  day02.py  day03.py  day04.py  day05.py
day18/src/: main.rs
day24/: index.js
scratch/: rot_in_place.py
